# magic-mic

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.audo  Dockerfile.rnnoise  PROTOCOL.md  README.md  binding.gyp  package.json
.github/workflows/: build-appimage_audo-ai.yml  build-appimage_rnnoise.yml
gui/: package.json
gui/src/main/: index.js  rpc.js
gui/src/renderer/: index.js
gui/src/static/: device_selector.scss  select.scss  toggle.scss
native/: CMakeLists.txt  README.md
native/common/: virtual_mic.h
native/denoiser/: denoiser.cc  denoiser.h  running_std.cc  running_std.h
native/module/: module_class.h
native/pipesource/: pipesource_virtual_mic.cc  pipesource_virtual_mic.h
native/pipesource-mvp/: app.cc  app.h  main.cc
native/server/: main.cc  rpc.cc  rpc.h
scripts/: beforeBuildCommand.sh  get_shared_library_deps.sh
src-native/: CMakeLists.txt  README.md  RNNoiseAP.cmake  audio_processor.hpp  audio_processor_manager.cpp  audio_processor_manager.hpp  main.cpp  pipesource_virtual_mic.cpp  pipesource_virtual_mic.hpp  rnnoise_proc.cpp  rnnoise_proc.hpp  rpc.cpp  rpc.hpp  static_module_stub.cpp.in  virtual_mic.hpp
src-native/common/: virtual_mic.h
src-native/denoiser/: audo-denoiser-v1.h  denoiser.cc  denoiser.h  main.cc  running_std.cc
src-native/module/: module-magic-mic.cc  module-magic-mic.cpp  module_class.cc  module_class.cpp  module_class.hpp
src-native/pipesource/: main.cc  pipesource_virtual_mic.cc  pipesource_virtual_mic.cpp  pipesource_virtual_mic.h  pipesource_virtual_mic.hpp
src-native/server/: main.cc  main.cpp  rpc.cc  rpc.cpp  rpc.h
src-tauri/: Cargo.toml  Makefile  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: .dir-locals.el  cmd.rs  main.rs  rpc.rs
src-web/: package.json
src-web/src/: cmd.js  device_selector.scss  index.js  main.scss  select.scss  toggle.scss  utils.js
src/main/: index.js
src/native/: binding.gyp  hello.cc
src/renderer/: index.js
src/static/: main.css  slider.css
