[package]
name = "magic-mic"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "magic-mic"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.0", features = ["api-all"] }
anyhow = { version = "1.0.38" }
log = "0.4.0"
env_logger = "0.8.3"
rand = "0.8.3"
tokio = { version = "1.6.1", features = [ "full" ] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "magic-mic"
path = "src/main.rs"
